--- a/index.html
+++ b/index.html
@@ -30,15 +30,19 @@
 
         <!-- Computerens gæt section -->
         <div id="computer-guess" class="tab-content" style="display:none;">
-    <h2>Computeren gætter på dit tal</h2>
-    <div id="computer-guess-output">
-        Computeren gætter på: <span id="current-guess"></span>
+            <h2>Computeren gætter på dit tal</h2>
+            <div id="computer-guess-output">
+                Computeren gætter på: <span id="current-guess"></span>
+            </div>
+            <ul id="computer-guesses">
+                <!-- Computerens gæt fremvises her -->
+            </ul>
+            <button id="too-low">For lavt</button>
+            <button id="correct">Korrekt</button>
+            <button id="too-high">For højt</button>
+            <button id="reset-button" style="display:none;">Start forfra</button> 
+        </div>
     </div>
-    <button id="too-low">For lavt</button>
-    <button id="correct">Korrekt</button>
-    <button id="too-high">For højt</button>
-    <button id="reset-button" style="display:none;">Start forfra</button> 
-</div>
 
     <script src="player-guess.js"></script>
     <script src="computer-guess.js"></script>
