Implemented the binarysearch funtion
The computer will Always guess correct within 6 or less guesses.

--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
             <ul id="computer-guesses">
                 <!-- Computerens gæt fremvises her -->
             </ul>
+            <!-- Ny indikator for antal gæt -->
+            <p id="guess-count">Antal gæt: 0</p>
             <button id="too-low">For lavt</button>
             <button id="correct">Korrekt</button>
             <button id="too-high">For højt</button>
